--- a/blog.css
+++ b/blog.css
@@ -30,21 +30,20 @@ body {
 
 
 .container {
-  padding-top: 30px;
-    display: flex;
-    justify-content: center;
+    padding-top: 30px;
+    padding-left: 50px;
+    display: grid;
 }
 
   .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 200px;
-    height: 350px;
+    width: 500px;
+    height: 250px;
     background: white;
     color: black;
     margin: 10px;
-    border-radius: 10px;
   }
   
   /* On mouse-over, add a deeper shadow */
@@ -54,37 +53,21 @@ body {
   
   .card-image {
     background-color: antiquewhite;
-    height: 150px;
-    margin-bottom: 10px;
+    height: 100px;
     background-size: cover;
-    border-radius: 10px 10px 0 0;
-  }
-  
-#img1 {
-    height: 150px;
-    max-width: 200px;
-    border-radius: 10px 10px 0 0;
   }
 
-  #img2 {
-    max-height: 150px;
-    width: 200px;
-    border-radius: 10px 10px 0 0;
-  }
-
-  #img3 {
-    max-height: 150px;
-    width: 200px;
-    border-radius: 10px 10px 0 0;
+  #img1 {
+    width: 500px;
+    height: 100px;
   }
 
   h4 {
-    text-align: center;
+    padding-left: 5px;
   }
 
   p {
     padding-left: 5px;
-    padding-bottom: 10px;
   }
 
   #link {
@@ -92,5 +75,6 @@ body {
     background-color: black;
     color: white;
     text-align: center;
-    display: grid;
+    display: flex;
+    justify-content: center;
   }
